<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Everneeds</string>
    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">Home</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="menu_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="nav_home_title">Home</string>
    <string name="nav_note_title">Note</string>
    <string name="nav_plan_title">Schedule</string>
    <string name="nav_track_title">Track</string>
    <string name="nav_discover_title">Discover</string>
    <string name="nav_more_title">More</string>

    <string name="sliding_tabs_title">Tabs</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_top_box_message">What\'s New</string>

    <!-- home fragment screen -->
    <string name="home_options_filter">Filter</string>
    <string name="home_options_search">Search</string>
    <string name="home_options_note">Notes</string>
    <string name="home_options_expand_all_sections">Expand All</string>
    <string name="home_options_collapse_all_sections">Collapse All</string>
    <string name="home_options_show_empty_sections">Empty Sections</string>
    <string name="home_options_show_footers">Footers</string>
    <string name="home_filters_all">All</string>
    <string name="home_filters_reminders">Reminders</string>
    <string name="home_filters_calendar">Calendar Events</string>
    <string name="home_filters_todo">To-Do Tasks</string>
    <string name="home_filters_important_dates">Important Dates</string>

    <!-- main2 navigation screen -->
    <string name="nav_actionbar_options_search">Search</string>
    <string name="nav_actionbar_options_expand_all_sections">Expand All</string>
    <string name="nav_actionbar_options_collapse_all_sections">Collapse All</string>
    <string name="nav_actionbar_options_night_mode">Night Mode</string>
    <string name="nav_actionbar_options_about">About</string>

    <!-- product_widget_container_viewview -->
    <string name="custom_collapsible_view_image_icon_desc">Icon</string>
    <string name="custom_collapsible_view_image_caret_desc">Collapse or Expand</string>

    <!-- product widget -->
    <string name="product_widget_title_placeholder">Title</string>
    <string name="product_widget_image_icon_desc">Icon</string>
    <string name="product_widget_image_caret_desc">Collapse or Expand</string>

    <!-- product titles -->
    <string name="product_widget_title_calendar">Calendar</string>
    <string name="product_widget_title_todo">To-Do List</string>
    <string name="product_widget_title_wish">Wish List</string>
    <string name="product_widget_title_dates">Important Dates</string>
    <string name="product_widget_title_weight">Weight</string>
    <string name="product_widget_title_height">Height</string>
    <string name="product_widget_title_documents">Documents</string>
    <string name="product_widget_title_projects">Projects</string>
    <string name="product_widget_title_notepad">Notepad</string>
    <string name="product_widget_title_journal">Journal</string>
    <string name="product_widget_title_emotion">Emotion</string>
    <string name="product_widget_title_contacts">Contacts</string>
    <string name="product_widget_title_location">Location</string>
    <string name="product_widget_title_chat">Chat</string>
    <string name="product_widget_title_moments">Moments</string>

    <!-- content description/placeholder -->
    <string name="image_view_content_description">Image</string>
    <string name="text_view_text">Text</string>

    <!-- More page titles -->
    <string name="more_user_profile_user_name_title">User</string>
    <string name="more_user_profile_user_id_title">user@example.com</string>
    <string name="night_mode_list_item_title">Night Mode</string>
    <string name="settings_list_item_title">Settings</string>
    <string name="settings_one_page_list_item_title">Settings</string>
    <string name="statistics_list_item_title">Statistics</string>
    <string name="favorites_list_item_title">Favorites</string>


    <!-- night mode -->
    <string name="night_mode_dialog_title">Night Mode</string>
    <string name="night_mode_follow_system_title">Follow System</string>
    <string name="night_mode_auto_title">Automatic</string>
    <string name="night_mode_day_title">Day (always)</string>
    <string name="night_mode_night_title">Night (always)</string>
    <string-array name="night_mode">
        <item>Follow System</item>
        <item>Automatic</item>
        <item>Day (always)</item>
        <item>Night (always)</item>
    </string-array>

    <!-- dialog text -->
    <string name="dialog_select">Select</string>

    <!-- generic values -->
    <string name="empty_string" />

    <!-- settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_ui">User Interface</string>
    <string name="pref_header_data_sync">Data &amp; Sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="title_about">About</string>
    <string name="title_qa">Questions and Answers</string>
    <string name="title_support">Support</string>

    <!-- notepad -->
    <string name="note_title">Title</string>
    <string name="note_details">Yesterday | 128KB I think the code point you have in your example is an ellipsis.</string>
    <string name="note_reminder">&#x23F0; Reminder</string>

</resources>
