<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yuxifu.everneeds.ui.main._exp.HomeActivity">
    <item
        android:id="@+id/home_options_filter"
        android:title="@string/home_options_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/home_options_search"
        android:title="@string/home_options_search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_options_note"
        android:title="@string/home_options_note"
        android:icon="@drawable/ic_note_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_options_expand_all_sections"
        android:title="@string/home_options_expand_all_sections"
        app:showAsAction="never"/>

    <item
        android:id="@+id/home_options_collapse_all_sections"
        android:title="@string/home_options_collapse_all_sections"
        app:showAsAction="never"/>

    <item
        android:id="@+id/home_options_show_empty_sections"
        android:checkable="true"
        android:checked="false"
        android:title="@string/home_options_show_empty_sections"
        app:showAsAction="never"/>

    <item
        android:id="@+id/home_options_show_footers"
        android:checkable="true"
        android:checked="true"
        android:title="@string/home_options_show_footers"
        app:showAsAction="never"/>

</menu>
