<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yuxifu.everneeds.ui.bottom_navigation.HomeActivity">
    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
