<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.yuxifu.everneeds.ui.settings.SettingsMultiplePageActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general">
        <extra android:name="settings" android:value="prefs_general" />
    </header>

    <header
        android:fragment="com.yuxifu.everneeds.ui.settings.SettingsMultiplePageActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_ui">
        <extra android:name="settings" android:value="prefs_ui" />
    </header>

    <header
        android:fragment="com.yuxifu.everneeds.ui.settings.SettingsMultiplePageActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_notifications">
        <extra android:name="settings" android:value="prefs_notification" />
    </header>

    <header
        android:fragment="com.yuxifu.everneeds.ui.settings.SettingsMultiplePageActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_data_sync">
        <extra android:name="settings" android:value="prefs_sync" />
    </header>

    <header
        android:id="@+id/settings_about"
        android:key="about"
        android:title="@string/title_about">
        <extra android:name="settings" android:value="prefs_about" />
    </header>

</preference-headers>
