<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="4dp">

    <!-- header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:padding="0dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_widget_image_icon_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/icons8_under_construction_96" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="@dimen/product_widget_header_height"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/product_widget_title_placeholder"
            android:textSize="14sp"
            android:textStyle="bold" />
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title" -->

        <ImageView
            android:id="@+id/caret"
            android:layout_width="@dimen/product_widget_header_height"
            android:layout_height="@dimen/product_widget_header_height"
            android:layout_gravity="center"
            android:contentDescription="@string/product_widget_image_caret_desc"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_collapse" />

    </LinearLayout>

    <!-- body will be inserted here -->

    <!-- possible footer -->

</LinearLayout>
